# opengl-c

./: CMakeLists.txt  main.c  reserve.c
shaders/: shader.fs  shader.vs
